Bug Fix - IE9 icon alignment for main menu 'browse solutions'

--- a/themes/gv_sky/css/sass/_parts/header.sass
+++ b/themes/gv_sky/css/sass/_parts/header.sass
@@ -148,7 +148,9 @@
 
 //Browse icon fix for firefox
 .gecko .main-menu-item.first:before
-	top: -4px
+	top: -4px//Browse icon fix for firefox
+.ie .main-menu-item.first:before
+	top: -2px
 //Browse icon fix for webkit
 .mobile .main-menu-item.first:before
 	top: -4px
